--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
-    "build": "next build 2> build-errors.log",
+    "build": "next build",
     "start": "next start"
   },
   "dependencies": {
